@@ -15,6 +15,8 @@ dependencies {
     testRuntime ('org.testfx:openjfx-monocle:jdk-12.0.1+2') {
         exclude group: 'org.openjfx'
     }
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
 }
 
 javafx {
@@ -86,9 +88,6 @@ javadoc {
                 "javafx.base/com.sun.javafx.event=org.controlsfx.controls",
                 "javafx.web/com.sun.webkit=org.controlsfx.controls",
                 "javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
-                "javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
-                "javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
-                "javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
                 "javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls"
         ]
 )
@@ -109,7 +108,8 @@ ext.java9TestArgs = [
         "--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx",
         // For Monocle
         "--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle",
-        "--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx"
+        "--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx",
+        "--add-reads=$moduleName=org.hamcrest",
 ]
 
 test {
